// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches last snapshot loading 1`] = `<Loading />`;

exports[`matches last snapshot loggedIn 1`] = `
<VersionCheck
  updateType={undefined}
>
  <Connect(LoggedInRoot) />
</VersionCheck>
`;

exports[`matches last snapshot not loggedIn 1`] = `
<VersionCheck
  updateType={undefined}
>
  <LoginNavigator />
</VersionCheck>
`;

exports[`matches last snapshot pending 1`] = `<Loading />`;
